assets/css/style.css
body {
  background: linear-gradient(0deg, rgb(0, 45, 87) 0%, white 63%);
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  display: block;
}

.hide {
  display: none;
}

/* Highscores and time left */
.corner {
  position: absolute;
  top: 5px;
  font-size: 1.5em;
  font-weight: 700;
  color: black;
}

a {
  text-decoration: none;
  color: black;
}

#highscores {
  left: 5px;
}
#timer {
  right: 5px;
}

/* Main Section Card */
main {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  margin: 100px auto 0 auto;
  max-width: 800px;
}

/* Button styling */
button {
  background: rgb(27, 57, 156);
  border-radius: 8px;
  border-color: white;
  color: #ffffff;
  cursor: pointer;
  font-size: 100%;
  padding: 10px 30px;
  text-align: center;
  max-height: 50px;
  margin: 10px;
}

/* Start Game Section */
.start-game-card {
  margin: 100px auto 0 auto;
  text-align: center;
  max-width: 600px;
}
.start-game-card h1 {
  font-size: 1.8em;
}
.start-game-card p {
  font-size: 1.5em;
}

.start-game-card > * {
  margin-bottom: 5%;
}

/* Questions and Answers */
h2 {
  font-size: 1.8em;
  text-align: center;
}

.choices {
  padding: 30px;
  min-width: 800px;
}
.choices button {
  display: block;
  margin: 10px;
}

.quiz-footer {
  margin-top: 10px;
  display: block;
  font-size: 1.5em;
  text-align: center;
}

/* Final Score */
#quiz-finished {
  margin-bottom: 30px;
  margin-top:100px;
}

.quiz-finished p {
  font-size: 1.25em;
}

/* Highscores List */
#highscoreheader {
  font-size: 2em;
  text-align: center;
  margin-bottom: 30px;
}
.highscore-buttons {
  display: flex;
  justify-content: center;
}
.highscoresblock {
  display: block;
  align-items: center;
}
#highscoreslist li {
  display: block;

  padding: 1%;
  border: black solid 1px;
  font-size: 1.8em;
  text-align: left;
}

#highscoreslist li:nth-child(even) {
  background-color: rgb(119, 119, 255);
}

#highscoreslist li:nth-child(odd) {
  background-color: rgb(217, 179, 255);
}

